// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectClustersContainer renders correct snapshot for Dask clusters 1`] = `
<StackCards
  copySnippets={
    Object {
      "Python": [Function],
    }
  }
  createPermission="projects:project-key:clusters:create"
  deletePermission="projects:project-key:clusters:delete"
  deleteStack={[Function]}
  editPermission="projects:project-key:clusters:edit"
  openCreationForm={[Function]}
  openPermission="projects:project-key:clusters:open"
  scaleStack={[Function]}
  showCreateButton={true}
  stacks={
    Object {
      "fetching": false,
      "value": Array [
        Object {
          "description": "tcp://dask-scheduler-test-cluster:8786 is the scheduler address.",
          "displayName": "Test Cluster",
          "name": "test-cluster",
          "projectKey": "project-key",
          "schedulerAddress": "tcp://dask-scheduler-test-cluster:8786",
          "type": "DASK",
        },
      ],
    }
  }
  typeName="Cluster"
  typeNamePlural="Clusters"
  userPermissions={[Function]}
/>
`;

exports[`ProjectClustersContainer renders correct snapshot for Spark clusters 1`] = `
<StackCards
  copySnippets={
    Object {
      "Python": [Function],
    }
  }
  createPermission="projects:project-key:clusters:create"
  deletePermission="projects:project-key:clusters:delete"
  deleteStack={[Function]}
  editPermission="projects:project-key:clusters:edit"
  openCreationForm={[Function]}
  openPermission="projects:project-key:clusters:open"
  scaleStack={[Function]}
  showCreateButton={true}
  stacks={
    Object {
      "fetching": false,
      "value": Array [
        Object {
          "description": "spark://spark-scheduler-test-cluster:7077 is the scheduler address.",
          "displayName": "Test Spark Cluster",
          "name": "test-spark-cluster",
          "projectKey": "project-key",
          "schedulerAddress": "spark://spark-scheduler-test-cluster:7077",
          "type": "SPARK",
        },
      ],
    }
  }
  typeName="Cluster"
  typeNamePlural="Clusters"
  userPermissions={[Function]}
/>
`;

exports[`ProjectClustersContainer renders correct snapshot for all clusters 1`] = `
<StackCards
  copySnippets={
    Object {
      "Python": [Function],
    }
  }
  createPermission="projects:project-key:clusters:create"
  deletePermission="projects:project-key:clusters:delete"
  deleteStack={[Function]}
  editPermission="projects:project-key:clusters:edit"
  openPermission="projects:project-key:clusters:open"
  scaleStack={[Function]}
  showCreateButton={true}
  stacks={
    Object {
      "fetching": false,
      "value": Array [
        Object {
          "description": "tcp://dask-scheduler-test-cluster:8786 is the scheduler address.",
          "displayName": "Test Cluster",
          "name": "test-cluster",
          "projectKey": "project-key",
          "schedulerAddress": "tcp://dask-scheduler-test-cluster:8786",
          "type": undefined,
        },
      ],
    }
  }
  typeName="Cluster"
  typeNamePlural="Clusters"
  userPermissions={[Function]}
/>
`;

exports[`getDialogProps returns object of props matching snapshot 1`] = `
Object {
  "clusterMaxWorkers": Object {
    "default": 4,
    "lowerLimit": 1,
    "upperLimit": 8,
  },
  "condaRequired": true,
  "dataStorageOptions": Array [],
  "formName": "createCluster",
  "onCancel": [Function],
  "onSubmit": [Function],
  "projectKey": "testproj",
  "title": "Create Cluster",
  "workerMaxCpu": Object {
    "default": 0.5,
    "lowerLimit": 0.5,
    "upperLimit": 2,
  },
  "workerMaxMemory": Object {
    "default": 4,
    "lowerLimit": 0.5,
    "upperLimit": 8,
  },
}
`;
